--- a/FriendFinder/app/build.gradle
+++ b/FriendFinder/app/build.gradle
@@ -28,7 +28,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.android.gms:play-services-maps:10.2.0'
-    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.2.0'
+    compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-auth:10.2.0'
     testCompile 'junit:junit:4.12'
 }
 
