--- a/FriendFinder/app/src/main/AndroidManifest.xml
+++ b/FriendFinder/app/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
             </intent-filter>
         </service>
-        <service android:name="MyFirebaseMessaging">
+        <service android:name=".MyFirebaseMessaging">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
